[gd_scene load_steps=2 format=3 uid="uid://dpes3r7qv5in6"]

[ext_resource type="Script" path="res://ui.gd" id="1_p6vii"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_p6vii")

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -40.0
offset_right = 77.0
grow_vertical = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="PlayerUI"]
layout_mode = 0
offset_left = 165.0
offset_top = -85.0
offset_right = 225.0
offset_bottom = -47.0

[node name="Button" type="Button" parent="PlayerUI/VBoxContainer2"]
layout_mode = 2
text = "Attack"

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PlayerUI/VBoxContainer"]
layout_mode = 2
text = "Health: 100"

[node name="EnemeyUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -129.0
offset_top = 9.0
offset_right = -89.0
offset_bottom = 49.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="EnemeyUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="EnemeyUI/VBoxContainer"]
layout_mode = 2
text = "Health: 100"

[connection signal="pressed" from="PlayerUI/VBoxContainer2/Button" to="." method="_on_button_pressed"]
